@@ -1,3 +1,8 @@
+Tue May 08 11:39:28 GMT 2012  Olly Betts <olly@survex.com>
+
+	* runfilter.cc: Add cast to rlim_t, required for C++11 compatibility
+	  according to new error from GCC 4.7 (reported by Gaurav Arora).
+
 Tue May 08 11:32:48 GMT 2012  Olly Betts <olly@survex.com>
 
 	* tmpdir.cc: Add safeunistd.h for rmdir, required by GCC 4.7 (reported
